feat:调整读取配置

--- a/index.html
+++ b/index.html
@@ -1,216 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>.logrc Icons</title>
-  <style>
-    :root{
-      --fg: #0B1220;          /* 前景深色 */
-      --fg-weak:#4B5565;      /* 次级描边 */
-      --brand:#6C5CE7;        /* 品牌主色 */
-      --accent:#22C55E;       /* 高亮色 */
-      --paper:#FFFFFF;        /* 文档底色 */
-      --paper-2:#F5F7FB;      /* 文档阴影 */
-      --ink:#0F172A;          /* 纯色图标 */
-      --grid:#E5E7EB;         /* 预览网格 */
-      --bg:#FBFCFE;           /* 页面背景 */
-    }
-    @media (prefers-color-scheme: dark){
-      :root{
-        --fg:#E5E7EB;
-        --fg-weak:#94A3B8;
-        --brand:#8B7CFF;
-        --accent:#34D399;
-        --paper:#111827;
-        --paper-2:#0B1220;
-        --ink:#F8FAFC;
-        --grid:#1F2937;
-        --bg:#0B1220;
-      }
-    }
-    html,body{background:var(--bg); color:var(--fg); font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";}
-    h1{font-weight:700; letter-spacing:.2px;}
-    .wrap{max-width:1100px; margin:32px auto; padding:0 20px;}
-    .grid{display:grid; grid-template-columns: repeat(auto-fit,minmax(220px,1fr)); gap:20px;}
-    .card{background:linear-gradient(180deg, rgba(0,0,0,.02), rgba(0,0,0,.00)); border:1px solid var(--grid); border-radius:16px; padding:16px; box-shadow:0 10px 20px rgba(0,0,0,.04);} 
-    .row{display:flex; gap:16px; align-items:center;}
-    .swatch{display:flex; gap:8px; align-items:center;}
-    .chip{width:14px;height:14px;border-radius:4px;}
-    .sizes{display:flex; gap:16px; align-items:center; flex-wrap:wrap;}
-    .tile{background: conic-gradient(from 0deg, var(--grid) 0 25%, transparent 25% 50%, var(--grid) 50% 75%, transparent 75% 100%) ; background-size: 12px 12px; border-radius:12px; padding:12px; display:inline-flex; align-items:center; justify-content:center;}
-    .caption{font-size:12px; color:var(--fg-weak); margin-top:6px}
-    svg{display:block}
-    .name{font-weight:600; margin-bottom:8px}
-    code{background:rgba(0,0,0,.05); padding:2px 6px; border-radius:6px}
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-  <div class="wrap">
-    <h1>.logrc 文件图标（4 款风格，含多尺寸预览）</h1>
-    <p>全部为纯 <code>SVG</code>，可无损缩放，支持浅/深色模式。建议用作 VSCode / 文件管理器 / 官网下载列表 / 文档页章封面等。</p>
-
-    <!-- A. Duotone File + Wave + Braces（推荐） -->
-    <div class="card">
-      <div class="name">A · Duotone：文件+波形+花括号（专业感/配置&日志双意）</div>
-      <div class="row">
-        <div class="sizes">
-          <div>
-            <div class="tile"><svg width="24" height="24" viewBox="0 0 24 24" aria-label="A-24"><use href="#icon-a"/></svg></div>
-            <div class="caption">24px</div>
-          </div>
-          <div>
-            <div class="tile"><svg width="32" height="32" viewBox="0 0 24 24" aria-label="A-32"><use href="#icon-a"/></svg></div>
-            <div class="caption">32px</div>
-          </div>
-          <div>
-            <div class="tile"><svg width="48" height="48" viewBox="0 0 24 24" aria-label="A-48"><use href="#icon-a"/></svg></div>
-            <div class="caption">48px</div>
-          </div>
-          <div>
-            <div class="tile"><svg width="128" height="128" viewBox="0 0 24 24" aria-label="A-128"><use href="#icon-a"/></svg></div>
-            <div class="caption">128px</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- B. Monoline .logrc Monogram -->
-    <div class="card">
-      <div class="name">B · Monoline：.logrc 字母抽象（极简/几何）</div>
-      <div class="row">
-        <div class="sizes">
-          <div>
-            <div class="tile"><svg width="24" height="24" viewBox="0 0 24 24" aria-label="B-24"><use href="#icon-b"/></svg></div>
-            <div class="caption">24px</div>
-          </div>
-          <div>
-            <div class="tile"><svg width="32" height="32" viewBox="0 0 24 24" aria-label="B-32"><use href="#icon-b"/></svg></div>
-            <div class="caption">32px</div>
-          </div>
-          <div>
-            <div class="tile"><svg width="48" height="48" viewBox="0 0 24 24" aria-label="B-48"><use href="#icon-b"/></svg></div>
-            <div class="caption">48px</div>
-          </div>
-          <div>
-            <div class="tile"><svg width="128" height="128" viewBox="0 0 24 24" aria-label="B-128"><use href="#icon-b"/></svg></div>
-            <div class="caption">128px</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- C. Color Blocks（Prettier 风） -->
-    <div class="card">
-      <div class="name">C · Color Blocks：彩色短线拼接（更活泼/工具集成）</div>
-      <div class="row">
-        <div class="sizes">
-          <div>
-            <div class="tile"><svg width="24" height="24" viewBox="0 0 24 24" aria-label="C-24"><use href="#icon-c"/></svg></div>
-            <div class="caption">24px</div>
-          </div>
-          <div>
-            <div class="tile"><svg width="32" height="32" viewBox="0 0 24 24" aria-label="C-32"><use href="#icon-c"/></svg></div>
-            <div class="caption">32px</div>
-          </div>
-          <div>
-            <div class="tile"><svg width="48" height="48" viewBox="0 0 24 24" aria-label="C-48"><use href="#icon-c"/></svg></div>
-            <div class="caption">48px</div>
-          </div>
-          <div>
-            <div class="tile"><svg width="128" height="128" viewBox="0 0 24 24" aria-label="C-128"><use href="#icon-c"/></svg></div>
-            <div class="caption">128px</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- D. Solid Glyph：纯色可读性最强 -->
-    <div class="card">
-      <div class="name">D · Solid：纯色矩形+波形（像素栅格友好）</div>
-      <div class="row">
-        <div class="sizes">
-          <div>
-            <div class="tile"><svg width="24" height="24" viewBox="0 0 24 24" aria-label="D-24"><use href="#icon-d"/></svg></div>
-            <div class="caption">24px</div>
-          </div>
-          <div>
-            <div class="tile"><svg width="32" height="32" viewBox="0 0 24 24" aria-label="D-32"><use href="#icon-d"/></svg></div>
-            <div class="caption">32px</div>
-          </div>
-          <div>
-            <div class="tile"><svg width="48" height="48" viewBox="0 0 24 24" aria-label="D-48"><use href="#icon-d"/></svg></div>
-            <div class="caption">48px</div>
-          </div>
-          <div>
-            <div class="tile"><svg width="128" height="128" viewBox="0 0 24 24" aria-label="D-128"><use href="#icon-d"/></svg></div>
-            <div class="caption">128px</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="name">配色参考</div>
-      <div class="swatch">
-        <span class="chip" style="background:var(--brand)"></span><span>#6C5CE7</span>
-        <span class="chip" style="background:var(--accent)"></span><span>#22C55E</span>
-        <span class="chip" style="background:var(--fg)"></span><span>前景</span>
-        <span class="chip" style="background:var(--paper)"></span><span>纸张</span>
-      </div>
-      <p class="caption">可按产品主色替换 <code>--brand</code>/<code>--accent</code> 实现一键换肤。</p>
-    </div>
-  </div>
-
-  <!-- ================= Symbols ================= -->
-  <svg width="0" height="0" style="position:absolute">
-    <!-- A: 文件+波形+花括号 -->
-    <symbol id="icon-a" viewBox="0 0 24 24" fill="none" stroke="none">
-      <!-- paper -->
-      <path d="M7 3.75h6.7c.2 0 .39.08.53.22l3.8 3.8c.14.14.22.33.22.53V18a2.25 2.25 0 0 1-2.25 2.25H7A2.25 2.25 0 0 1 4.75 18V6A2.25 2.25 0 0 1 7 3.75Z" fill="var(--paper)" stroke="var(--fg-weak)" stroke-width="1.25"/>
-      <path d="M14 3.75V6.5A1.5 1.5 0 0 0 15.5 8h2.75" stroke="var(--fg-weak)" stroke-width="1.25"/>
-      <!-- wave -->
-      <path d="M6.5 13.75c1.2 0 1.2-3 2.4-3s1.2 3 2.4 3 1.2-3 2.4-3 1.2 3 2.4 3" fill="none" stroke="var(--brand)" stroke-linecap="round" stroke-width="1.5"/>
-      <!-- braces -->
-      <path d="M6.2 10.2c-.6 0-1 .4-1 1v1.6c0 .55-.45 1-1 1h-.2m13.8-3.6c.6 0 1 .4 1 1v1.6c0 .55.45 1 1 1h.2" fill="none" stroke="var(--accent)" stroke-width="1.25" stroke-linecap="round"/>
-      <!-- extension label -->
-      <rect x="8" y="16.25" rx="1.25" ry="1.25" width="8" height="3" fill="var(--brand)" opacity=".12"/>
-      <text x="12" y="18.35" text-anchor="middle" font-family="ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace" font-size="2.8" fill="var(--fg)">.logrc</text>
-    </symbol>
-
-    <!-- B: Monoline 字母抽象 (. l o g r c) -->
-    <symbol id="icon-b" viewBox="0 0 24 24" fill="none">
-      <g stroke-linecap="round" stroke-linejoin="round" stroke="var(--fg)" stroke-width="1.5">
-        <path d="M4.5 6v12"/>
-        <circle cx="10" cy="10" r="2.25"/>
-        <path d="M13 14.5c0 1.93 1.57 3.5 3.5 3.5s3.5-1.57 3.5-3.5-1.57-3.5-3.5-3.5c-.8 0-1.54.27-2.13.72"/>
-        <path d="M7.5 12h2.5"/>
-        <path d="M5.5 18.2c1 0 1.8-.8 1.8-1.8"/>
-      </g>
-      <text x="12" y="21" text-anchor="middle" font-size="2.6" fill="var(--fg-weak)" font-family="ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace">.logrc</text>
-    </symbol>
-
-    <!-- C: 彩色短线拼接（Prettier 风） -->
-    <symbol id="icon-c" viewBox="0 0 24 24" fill="none">
-      <g stroke-linecap="round" stroke-width="2">
-        <path d="M5 6h10" stroke="#F59E0B"/>
-        <path d="M5 9h6" stroke="#6366F1"/>
-        <path d="M5 12h12" stroke="#22C55E"/>
-        <path d="M5 15h8" stroke="#EC4899"/>
-        <path d="M5 18h4" stroke="#06B6D4"/>
-      </g>
-      <rect x="17" y="5" width="3" height="14" rx="1.2" fill="var(--fg)" opacity=".12"/>
-      <text x="18.5" y="13" text-anchor="middle" font-size="3" fill="var(--fg)">L</text>
-      <text x="12" y="21" text-anchor="middle" font-size="2.6" fill="var(--fg-weak)" font-family="ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace">.logrc</text>
-    </symbol>
-
-    <!-- D: Solid Glyph（像素友好） -->
-    <symbol id="icon-d" viewBox="0 0 24 24" fill="none">
-      <rect x="4.5" y="4.5" width="15" height="15" rx="3" fill="var(--ink)"/>
-      <path d="M7 12c1.1 0 1.1-2.6 2.2-2.6S10.5 12 11.6 12s1.1-2.6 2.2-2.6S15 12 16.1 12" stroke="var(--paper)" stroke-width="1.6" stroke-linecap="round"/>
-      <rect x="8" y="14.2" width="8" height="3" rx="1" fill="var(--paper)" opacity=".14"/>
-    </symbol>
-  </svg>
   
 </body>
 </html>
