--- a/resources/webview/html/index.html
+++ b/resources/webview/html/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'unsafe-inline' 'self'; style-src 'self' 'unsafe-inline';">
+  %%metaContent%%
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>React Webview</title>
-  %%STYLE%%
+  %%styleContent%%
 </head>
+
 <body>
+  <h1>欢迎</h1>
   <div id="root"></div>
-  %%SCRIPT%%
+  %%jsContent%%
 </body>
+
 </html>
