--- a/resources/webview/html/index.html
+++ b/resources/webview/html/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   %%metaContent%%
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>React Webview</title>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.7.16/dist/vue.min.js"></script>
   %%styleContent%%
 </head>
-
 <body>
-  <h1>欢迎</h1>
-  <div id="root"></div>
+  <div id="app"></div>
+  %%vueContent%%
   %%jsContent%%
 </body>
-
 </html>
