feat:新增webview与vscode插件交互

--- a/resources/webview/html/index.html
+++ b/resources/webview/html/index.html
@@ -9,8 +9,16 @@
   %%styleContent%%
 </head>
 <body>
-  <div id="app"></div>
-  %%vueContent%%
+  <div id="app">
+    <div class="webview-title">
+      <span class="webview-title-text"></span>
+      <input class="webview-title-search" placeholder="请输入" />
+    </div>
+    <div class="webview-shell">
+      
+    </div>
+    <div class="webview-service"></div>
+  </div>
   %%jsContent%%
 </body>
 </html>
