--- a/src/webview/html/index.html
+++ b/src/webview/html/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  %%metaContent%%
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>React Webview</title>
-  %%styleContent%%
+  <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
   <div id="app">
@@ -18,6 +17,6 @@
     </div>
     <div class="webview-service"></div>
   </div>
-  %%jsContent%%
+  <script src="../js/index.js"></script>
 </body>
 </html>
