--- a/src/webview/html/index.html
+++ b/src/webview/html/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>React Webview</title>
-  <link rel="stylesheet" href="../css/index.css">
+  <title>Vue Webview with Template</title>
+  <!-- Element UI 样式 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/element-ui/2.15.14/theme-chalk/index.min.css" />
+  <link rel="stylesheet" href="../css//index.css">
+  <!-- ⚠️ 注意这里：用 vue.min.js (完整版)，而不是 vue.runtime.min.js -->
+  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.min.js"></script>
+  <!-- Element UI 脚本 -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/element-ui/2.15.14/index.min.js"></script>
 </head>
+
 <body>
-  <div id="app">
-    <div class="webview-title">
-      <span class="webview-title-text"></span>
-      <input class="webview-title-search" placeholder="请输入" />
-    </div>
-    <div class="webview-shell">
-      
-    </div>
-    <div class="webview-service"></div>
-  </div>
+  <div id="app"></div>
+
   <script src="../js/index.js"></script>
 </body>
+
 </html>
