--- a/resources/webview/html/index.html
+++ b/resources/webview/html/index.html
@@ -16,6 +16,9 @@
 
   <body>
     <div id="app"></div>
+    <script>
+      const vscode = acquireVsCodeApi();
+    </script>
     <script src="../js/index.js"></script>
   </body>
 </html>
